// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modus-wc-avatar should render with custom props 1`] = `
<modus-wc-avatar alt="Custom avatar" custom-class="test-class" img-src="https://example.com/avatar.jpg" shape="square" size="sm">
  <div aria-label="Custom avatar" class="modus-wc-avatar">
    <div class="modus-wc-rounded-lg modus-wc-w-12 test-class">
      <img alt="Custom avatar" src="https://example.com/avatar.jpg">
    </div>
  </div>
</modus-wc-avatar>
`;

exports[`modus-wc-avatar should render with default props 1`] = `
<modus-wc-avatar alt="Default avatar">
  <div aria-label="Default avatar" class="modus-wc-avatar">
    <div class="modus-wc-rounded-full modus-wc-w-16 no-image">
      <modus-wc-icon aria-label="Default avatar" name="person" size="md" variant="solid"></modus-wc-icon>
    </div>
  </div>
</modus-wc-avatar>
`;

exports[`modus-wc-avatar should render with initials limited to 3 characters 1`] = `
<modus-wc-avatar initials="John Michael Doe">
  <div class="modus-wc-avatar">
    <div class="modus-wc-rounded-full modus-wc-w-16">
      <span aria-label="John Michael Doe" class="initials">
        JMD
      </span>
    </div>
  </div>
</modus-wc-avatar>
`;

exports[`modus-wc-avatar should render with initials when imgSrc is not provided 1`] = `
<modus-wc-avatar alt="User initials" initials="John Doe">
  <div aria-label="User initials" class="modus-wc-avatar">
    <div class="modus-wc-rounded-full modus-wc-w-16">
      <span aria-label="User initials" class="initials">
        JD
      </span>
    </div>
  </div>
</modus-wc-avatar>
`;

exports[`modus-wc-avatar should render with no props 1`] = `
<modus-wc-avatar>
  <div class="modus-wc-avatar">
    <div class="modus-wc-rounded-full modus-wc-w-16 no-image">
      <modus-wc-icon aria-label="User avatar" name="person" size="md" variant="solid"></modus-wc-icon>
    </div>
  </div>
</modus-wc-avatar>
`;
